# core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  core.h  vix.json
.github/workflows/: core-strict-ci.yml
app/: App.cpp  App.hpp  Module.hpp
benchmarks/: CMakeLists.txt  README.md
benchmarks/app/: app_group_registration_bench.cpp  app_route_registration_bench.cpp
benchmarks/baselines/v2.6.3/: core_app_group_registration_bench.json  core_app_route_registration_bench.json  core_executor_metrics_bench.json  core_executor_post_bench.json  core_executor_submit_bench.json  core_http_request_bench.json  core_http_response_bench.json  core_router_match_bench.json  core_router_registration_bench.json  core_runtime_queue_bench.json  core_runtime_scheduler_bench.json  core_runtime_task_bench.json  core_runtime_worker_bench.json  core_session_fake_transport_bench.json
benchmarks/common/: Benchmark.hpp  BenchmarkJson.hpp
benchmarks/executor/: executor_metrics_bench.cpp  executor_post_bench.cpp  executor_submit_bench.cpp
benchmarks/http/: http_request_bench.cpp  http_response_bench.cpp
benchmarks/results/current/: core_app_group_registration_bench.json  core_app_route_registration_bench.json  core_executor_metrics_bench.json  core_executor_post_bench.json  core_executor_submit_bench.json  core_http_request_bench.json  core_http_response_bench.json  core_router_match_bench.json  core_router_registration_bench.json  core_runtime_queue_bench.json  core_runtime_scheduler_bench.json  core_runtime_task_bench.json  core_runtime_worker_bench.json  core_session_fake_transport_bench.json
benchmarks/router/: router_match_bench.cpp  router_registration_bench.cpp
benchmarks/runtime/: runtime_queue_bench.cpp  runtime_scheduler_bench.cpp  runtime_task_bench.cpp  runtime_worker_bench.cpp
benchmarks/session/: session_fake_transport_bench.cpp
cmake/: vix_coreConfig.cmake.in
config/: Config.cpp  Config.hpp  RouteConfigurator.cpp  RouteConfigurator.hpp
http/: Request.hpp
include/: vix.hpp
include/vix/: Version.hpp  console.hpp  core.h  core.hpp  format.hpp  input.hpp  inspect.hpp  print.hpp
include/vix/app/: App.hpp
include/vix/config/: Config.hpp
include/vix/console/: Console.hpp
include/vix/executor/: IExecutor.hpp  Limit.hpp  Metrics.hpp  RuntimeExecutor.hpp  Strand.hpp  TaskOptions.hpp
include/vix/experimental/: ThreadPoolExecutor.hpp
include/vix/format/: Format.hpp
include/vix/http/: IRequestHandler.hpp  Request.hpp  RequestHandler.hpp  RequestState.hpp  Response.hpp  ResponseWrapper.hpp  Status.hpp
include/vix/inspect/: Inspect.hpp
include/vix/json/: Simple.hpp
include/vix/meta/: traits.hpp
include/vix/mw/: context.hpp  hooks.hpp  mw.hpp  next.hpp  result.hpp
include/vix/openapi/: DocsUI.hpp  OpenApi.hpp  Registry.hpp  register_docs.hpp
include/vix/print/: Print.hpp
include/vix/router/: IRequestHandler.hpp  RequestHandler.hpp  RouteDoc.hpp  RouteNode.hpp  RouteOptions.hpp  Router.hpp
router/: DynamicRequestHandler.cpp  DynamicRequestHandler.hpp  RequestHandler.hpp  RouteManager.hpp  Router.cpp  Router.hpp  SimpleRequestHandler.cpp  SimpleRequestHandler.hpp  UnifiedRequestHandler.hpp
scripts/: compare_core_benchmarks.py  run_core_benchmarks.sh
server/: HTTPServer.cpp  HTTPServer.hpp  ThreadPool.cpp  ThreadPool.hpp
session/: Session.cpp  Session.hpp
src/app/: App.cpp  StdoutConfig.cpp
src/config/: Config.cpp
src/executor/: ThreadPoolExecutor.cpp
src/experimental/: ThreadPoolExecutor.cpp
src/http/: Request.cpp  RequestHandler.cpp  RequestState.cpp  Response.cpp  ResponseWrapper.hpp
src/router/: Router.cpp
src/server/: HTTPServer.cpp  ThreadPool.cpp
src/session/: Session.cpp  TlsSession.cpp  TlsTransport.cpp
src/sync/: NetworkProbe.cpp
src/threadpool/: ThreadPool.cpp
src/view/: TemplateView.cpp
tests/: CMakeLists.txt  core_smoke_test.cpp  format_test.cpp  session_disconnect_tests.cpp
tests/app/: app_config_test.cpp  app_constructor_test.cpp  app_dev_mode_test.cpp  app_group_test.cpp  app_lifecycle_test.cpp  app_middleware_test.cpp  app_module_init_test.cpp  app_protect_test.cpp  app_routes_test.cpp  app_static_dir_test.cpp  app_static_hook_test.cpp  app_templates_test.cpp
tests/config/: config_copy_move_test.cpp  config_database_test.cpp  config_defaults_test.cpp  config_env_test.cpp  config_logging_test.cpp  config_reload_test.cpp  config_set_get_test.cpp  config_tls_test.cpp  config_typed_accessors_test.cpp  config_waf_test.cpp
tests/executor/: metrics_test.cpp  runtime_executor_constructor_test.cpp  runtime_executor_lifecycle_test.cpp  runtime_executor_metrics_test.cpp  runtime_executor_post_test.cpp  runtime_executor_shutdown_test.cpp  runtime_executor_submit_test.cpp  task_options_test.cpp
tests/http/: cache_context_mapper_smoke_test.cpp  cache_smoke_test.cpp  request_handler_helpers_test.cpp  request_state_test.cpp  request_test.cpp  response_test.cpp  response_wrapper_test.cpp  status_test.cpp
tests/router/: route_doc_test.cpp  route_node_test.cpp  route_options_test.cpp  router_dispatch_test.cpp  router_registration_test.cpp  router_static_helpers_test.cpp
tests/runtime/: bench_threadpool_vs_runtime.cpp  budget_test.cpp  mailbox_test.cpp  run_queue_test.cpp  runtime_config_test.cpp  runtime_lifecycle_test.cpp  scheduler_test.cpp  supervisor_test.cpp  task_test.cpp  test_runtime.cpp  worker_test.cpp
tests/server/: http_server_constructor_test.cpp  http_server_router_test.cpp  http_server_run_validation_test.cpp  http_server_shutdown_test.cpp  http_server_threading_test.cpp  tls_config_test.cpp
tests/session/: parsed_request_head_test.cpp  plain_transport_test.cpp  session_constructor_test.cpp  session_error_test.cpp  session_http_body_test.cpp  session_http_get_test.cpp  session_keep_alive_test.cpp  session_waf_test.cpp  tls_session_test.cpp  tls_transport_test.cpp  transport_test.cpp
tests/sync/: sync_engine_inflight_timeout_test.cpp  sync_engine_outbox_permanent_fail_test.cpp  sync_engine_outbox_smoke_test.cpp
utils/: Logger.hpp
(+49 files in other folders)
